--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.2",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
@@ -28,7 +29,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "fiber": "^1.0.4",
+    "fibers": "^4.0.2",
     "lint-staged": "^9.5.0",
     "node-sass": "^4.12.0",
     "sass": "^1.26.3",
