--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "tailwindcss": "^1.3.4",
+    "tailwindcss": "^1.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-toasted": "^1.1.28",
     "vuex": "^3.2.0"
   },
   "devDependencies": {
@@ -31,8 +32,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "fibers": "^4.0.3",
     "lint-staged": "^9.5.0",
-    "node-sass": "^4.12.0",
-    "sass": "^1.26.3",
+    "node-sass": "^4.14.0",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
