--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "tailwindcss": "^1.3.5",
+    "tailwindcss": "^1.4.4",
     "vue": "^2.6.11",
+    "vue-mathjax": "0.0.11",
     "vue-router": "^3.1.6",
     "vue-toasted": "^1.1.28",
-    "vuex": "^3.2.0"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.2",
